fix: mobile overflow pt 2

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 html,
 body {
+  overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
   margin: 0;
   padding: 0;
@@ -13,6 +14,12 @@ body {
   overflow-x: hidden;
   max-width: 100%;
   position: relative;
+}
+
+.site-wrapper {
+  overflow-x: hidden; /* Apply here to fix ghost zone without hiding text */
+  width: 100%;
+  min-width: 100vw; /* Ensures no extra horizontal space on mobile */
 }
 
 /* Hero Section */
